# translator

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh
translator/: langs.py  llm.py  main.py  parser.py
