[project]
name = "translator"
version = "0.3.2"
description = ""
authors = [
    { name = "Andrew Moffat", email = "arwmoffat@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai (>=1.97.0,<2.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[project.scripts]
translate = "translator:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0,<26.0.0",
    "pytest>=7.3.1,<8.0.0",
    "mypy>=1.15.0,<2.0.0",
    "flake8>=7.1.2,<8.0.0",
    "munch>=4.0.0,<5.0.0",
    "pre-commit>=4.2.0,<5.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.67.0.20250516"
black = "^25.1.0"
flake8 = "^7.3.0"

