[project]
name = "translator"
version = "0.5.0"
description = ""
authors = [
    { name = "Andrew Moffat", email = "arwmoffat@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai",
    "lxml",
    "tqdm",
    "python-dotenv",
]

[project.scripts]
translate = "translator:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy",
    "munch",
    "pre-commit",
    "types-tqdm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"translator/llm.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
